wp/wp-content/themes/phila.gov-theme/css/scss/2024-refresh/_mayor.scss
.mayor-page {
  .hero-content {
    background: color(ben-franklin-blue);
    color: white;
    text-align: left;
  }
  .image-offset{
    .one-philly-mayor {
      position: relative;
      top: 2rem;
    }
  }
  .mr-meeseeks {
    h1 {
      font-size: 3rem;
      @include breakpoint(medium down) {
        font-size: 2rem;
      }
    }
    span.MAYOR {
      display: block;
      text-transform: uppercase;
      font-size: 5rem;
      line-height: 4rem;
      font-weight: 700;
      @include breakpoint(medium down) {
        font-size: 3rem;
        line-height: 3rem;
      }
    }
    .tagline {
      font-size: 2rem;
      font-style: italic;
      font-family: 'Times New Roman', Times, serif;
      @include breakpoint(medium down) {
        font-size: 1.5rem;
      }
    }
    @include breakpoint(medium down) {
      text-align: center;
    }
  }
  #what-we-do, .connect-box .contrast {
    display: none;
  }
  .custom-text{
    p, ul, li, div{
      font-size: 1.2rem;
    }
  }
  table.connect{
    font-size: 1.4rem !important;

    th, td{
      padding: 0 0 2rem 0;
    }
    div {
      font-size: 1.4rem !important;
    }
    tbody {
      background-color: white;
    }
    &.no-alternate tr:nth-child(even){
      background-color: white;
    }
  }
  .cta-multi{
    padding: 0;
    margin: 0;

    .color-block-card--container {
      position: relative;
      font-family: 'Times New Roman', Times, serif;
      text-decoration: none;
      color: white;
      height: 446px;
      @include breakpoint(medium down) {
        text-align: center;
        margin: 2rem;
      }
      .copy {
          font-size: 2.5rem;
          line-height: 3rem;
          color: white;
          box-shadow: inset 0 -0.7em 0 0 #0f4d90;
      }
      .color-block-card--background {
         height: 100%;
         width: 100%;
      }
      a.color-block-card {
        display: block;
        position: absolute;
        padding: 4rem 1rem 4rem 4rem;
        top: 0;
        left: 0;
        height: fit-content;
        width: 100%;
        min-height: 100%;
        @include breakpoint(medium down) {
          text-align: center;
          padding: 2rem;
        }
      }
      i {
        color: white;
      }
    }
    .cell {
      &:nth-child(1) a.color-block-card {
        // this is electric-blue, converted to rgb so we can manipulate opacity on hover
        background: rgba(37, 205, 247, 0.9) !important;
        &:hover {
          background: rgba(37, 205, 247, 0.2) !important
        }
      }
      &:nth-child(2) a.color-block-card {
        // This is flyers-orange, converted to rgb so we can manipulate opacity on hover
        background: rgba(249, 147, 0, 0.9) !important;
        &:hover {
          background: rgba(249, 147, 0, 0.2) !important
        }
      }
      &:nth-child(3) a.color-block-card {
        // This is ben-franklin-blue, converted to rgb so we can manipulate opacity on hover.
        background: rgba(33, 118, 210, 0.9) !important;
        &:hover {
          background: rgba(33, 118, 210, 0.2) !important
        }
      }
      &:nth-child(4) a.color-block-card {
        // We don't currently use a 4th cell, so I haven't converted it.
        background: color(dark-ben-franklin) !important;
        a {
          color: white;
          &:hover{
            color: #444;
          }
        }
      }
    }
    h2 {
      font-family: Montserrat-Bold,Montserrat Bold,Montserrat,sans-serif;
      font-size: 3.75rem;
      line-height: 4rem;
      font-weight: 700;
      @include breakpoint(medium down) {
        font-size: 2.75rem;
        line-height: 2.75rem;
      }
    }
  }
}

